--- a/_config.yml
+++ b/_config.yml
@@ -1,56 +1,38 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+title: Servv AI Support Documentation
+description: Learn how to create and manage events with Servv AI on WordPress and Shopify, and explore APIOps for Azure API Management.
+baseurl: "/justthedocs"
+url: "https://vijaycoderisetechnologies.github.io"
+theme: just-the-docs
+color_scheme: light
 
-title: baghelvijay
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# Enable search
+search_enabled: true
 
-# Build settings
-remote_theme: benbalter/retlab
-plugins:
-  - jekyll-feed
-  - jekyll-remote-theme
+# Search button in the header
+search_button: true
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# Auxiliary links in the header
+aux_links:
+  "Servv AI":
+    - "//servv.ai"
+  "APIOps Guide":
+    - "//azure.github.io/apiops/"
+
+# Footer content
+footer_content: "Built with Jekyll and Just the Docs. &copy; 2025 Vijay Coderise Technologies."
+
+# Enable heading anchors
+heading_anchors: true
+
+# Enable last edited timestamp
+last_edit_timestamp: true
+last_edit_time_format: "%b %d, %Y"
+
+
+# Navigation
+nav_sort: case_insensitive
+nav_external_links:
+  - title: Servv AI
+    url: https://servv.ai
+  - title: APIOps Guide
+    url: https://azure.github.io/apiops/
