--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ destination: _site
 baseurl: ""
 permalink: pretty
 
-theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
 
 # Navigation
 nav:
