--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: JustTheDocs
+title: Servv AI Documentation
 description: Documentation site for JustTheDocs
 # Because this is a *project site*, baseurl must be your repo name (the subdirectory)
 baseurl: "/justthedocs"
