--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Servv AI Documentation
 description: Documentation site for JustTheDocs
 # Because this is a *project site*, baseurl must be your repo name (the subdirectory)
-baseurl: "/justthedocs"
+baseurl: "/justthedocs/pages"
 url: "https://vijaycoderisetechnologies.github.io"
 
 # --- THEME SETUP ---
