--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,6 @@ markdown: kramdown
 permalink: pretty
 
 aux_links:
-  "APIOps on GitHub":
+  "ServvAI on GitHub":
     - "//https://github.com/vijaycoderisetechnologies/justthedocs"
 aux_links_new_tab: true
